# sentiment-dialect-detection

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  QUICKSTART.md  README.md  REBUILD_SUMMARY.md  TESTING.md  TEST_REPORT.md  api_config.json  coverage.xml  data_processing.py  dialect_detector.py  docker-compose.yml  main_runner.py  multilingual_model.py  pyproject.toml  requirements-dev.txt  requirements.txt  sentiment_api.py  sentiment_model.py  setup.py  streamlit_app.py
.github/workflows/: ci.yml
data/: english_sentiment_data.csv  french_sentiment_data.csv  german_sentiment_data.csv  persian_dialect_data.csv  persian_sentiment_data.csv
scripts/: run_api.py  run_tests.sh  setup_dev.sh
src/: __init__.py
src/api/: __init__.py  app.py  schemas.py  service.py
src/models/: __init__.py  base.py  dialect.py  multilingual.py  sentiment.py
src/preprocessing/: __init__.py  data_loader.py  text_processor.py
src/utils/: config.py  logger.py
src/web/: __init__.py
tests/: __init__.py  conftest.py
tests/integration/: test_api.py
tests/unit/: test_api_schemas.py  test_data_loader.py  test_text_processor.py
